支持在首页显示登录用户发起的项目列表

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -18,9 +18,11 @@
 <script type="text/javascript">
 require(["dojo/ready",
          "dojo/_base/event",
+         "dojo/_base/array",
 		 "dojo/on",
          "dojo/dom",
          "dojo/dom-class",
+         "dojo/dom-construct",
          "dojo/request/xhr",
          "dojo/store/JsonRest",
          "dijit/registry",
@@ -29,9 +31,11 @@ require(["dojo/ready",
          "dojo/domReady!"],function(
         		 ready,
         		 event,
+        		 array,
         		 on,
         		 dom,
         		 domClass,
+        		 domConstruct,
         		 xhr,
         		 JsonRest,
         		 registry,
@@ -145,8 +149,18 @@ require(["dojo/ready",
 	
 	// 加载登录用户发起的项目列表
 	// 如果没有传递用户信息，则获取登录用户的项目列表
+	var projectList = dom.byId("my_project_list");
 	xhr.get("/projects/",{handleAs:"json"}).then(function(data){
-		console.log("projects", data);
+		if(data.length == 0){
+			projectList.innerHTML = "您还没有发起项目";
+		}else{
+			array.forEach(data, function(item, index){
+				var li = domConstruct.create("li", null, projectList);
+				var a = domConstruct.create("a", {href:"#"}, li);
+				var span = domConstruct.create("span", {innerHTML: item.name}, a);
+			});
+			
+		}
 	}, function(error){
 		
 	});
@@ -290,10 +304,11 @@ function sendRenrenRequest(){
 							 	
 							 	<div class="box box-small">
 							 		<div class="box-header">
-							 			<h3 class="box-title">我发起的项目</h3>
-							 			<div class="box-body">
-							 				<ul class="project-list" id="my_project_list"></ul>
-							 			</div>
+							 			<a href="/projects/new" class="minibutton primary new-project">发起新项目</a>
+							 			<h3 class="box-title">我的项目</h3>
+							 		</div>
+							 		<div class="box-body">
+							 			<ul class="project-list" id="my_project_list"></ul>
 							 		</div>
 							 	</div>
 							</div>
