--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -156,8 +156,12 @@ require(["dojo/ready",
 		}else{
 			array.forEach(data, function(item, index){
 				var li = domConstruct.create("li", null, projectList);
-				var a = domConstruct.create("a", {href:"#"}, li);
-				var span = domConstruct.create("span", {innerHTML: item.name}, a);
+				var projectUrl = "/projects/" + item.createUserName + "/" + item.name;
+				var a = domConstruct.create("a", {href:projectUrl}, li);
+				domConstruct.create("span", {innerHTML: item.createUserName}, a);
+				var textNode = document.createTextNode("/");
+				a.appendChild(textNode);
+				domConstruct.create("span", {innerHTML: item.name}, a);
 			});
 			
 		}
