走通intern的测试流程。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -10,7 +10,23 @@
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
 <title>孜孜不倦 · 一起交流学习心得，共同优化教育资源。</title>
 <link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
-
+<script type="text/javascript" 
+	data-dojo-config="
+		async:true,
+		parseOnLoad:false,
+		isDebug:true" 
+	src="/dojo/dojo.js"></script>
+	
+<script type="text/javascript">
+	require(["dojo/parser",
+	         "drip/mixLogin/Register"], function(
+	        		 parser,
+	        		 Register){
+		
+		parser.parse();
+		
+	});
+</script>
 </head>
 <body style="padding: 0px;margin: 0px">
 <div id="wrapper">
