在客户端的注册部件中加入有效性校验，下一次提交时，补上测试用例。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -8,7 +8,7 @@
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
-<title>孜孜不倦 · 一起交流学习心得，共同优化教育资源。</title>
+<title>孜孜不倦 · 协作写笔记,快乐做习题</title>
 <link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
 <script type="text/javascript" 
 	data-dojo-config="
@@ -28,60 +28,17 @@
 	});
 </script>
 </head>
-<body style="padding: 0px;margin: 0px">
-<div id="wrapper">
-<!-- 因为这里永远是用户没有登录时访问，所以就简单处理，不为了统一组件调用引入一堆dojo代码 -->
-<!-- 等需要的时候再引入 -->
-<div class="drip_header drip_header_logged_out">
-	<div class="container clearfix">
-		<a href="/" class="drip_header_logo">
-			<img alt="孜孜不倦" width="140px" height="40px" src="drip/resources/images/home_logo.png">
-		</a>
-		<span class="drip_version">测试版</span>
-		<ul class="drip_top_nav">
-			<li><a href="/exercises">题库</a></li>
-			<li><a href="/help">帮助</a></li>
-			<!-- <li><a href="/docs">文档</a></li> -->
-			<!-- <li><a href="#">开发博客</a></li> -->
-		</ul>
+<body style="padding: 0px;margin: 0px; height: 100%">
+
+<div style="margin: 0 auto; width:245px;position: relative;top: 50%; margin-top: -200px">
+	<div>
+		<h1 class="logo">孜孜不倦</h1>
+		<h2>协作写笔记，快乐做习题</h2>
+	</div>
+	<div data-dojo-type="drip/mixLogin/Register">
+		
 	</div>
 </div>
-<div class="drip_home drip_site">
-	<div class="drip_welcome_area clearfix">
-		<div class="container">
-			<div class="drip_home_signup">
-				<!-- <p class="drip_note">不用注册，直接用以下帐号登录</p>-->
-				<p class="drip_note">不用注册，直接用人人帐号登录</p>
-				<!-- 
-				<div>
-					<a href="/login/qq">
-						<img alt="用qq帐号登录" src="drip/resources/images/qq_login_5.png"></img>
-					</a>
-				</div>
-				 -->
-				<div>
-					<a href="/login/renren">
-						<img alt="用人人帐号登录" src="drip/resources/images/renren_login_white_234_48.png"></img>
-					</a>
-				</div>
-				<!-- 
-				<div>
-					<a href="/login/sinaWeibo">
-						<img alt="用新浪微博帐号登录" src="drip/resources/images/sina_weibo_login_48.png"></img>
-					</a>
-				</div>
-				 -->
-			</div>
-			<div class="drip_heading">
-				<p>协作写笔记</p>
-				<p>快乐做习题</p>
-				<p class="drip_subheading" style="margin-top: 30px">邀请考研的同学，一起录入习题，解答习题。</p>
-			</div>
-		</div>
-	</div>
-</div>
-<div>
-</div>
-</div>
+
 </body>
 </html>
