--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -2,70 +2,46 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="keywords" content="在线学习,教育,数学,考研">
+<meta name="keywords" content="在线学习,教育,数学,考研,笔记,文档">
 <meta name="description" content="孜孜不倦 - 免费、开放的在线学习平台，学生可在这里做题，看教学视频，与各地同学一起交流；教师和与全国优秀教师共同维护讲义，教学视频等。">
 <!-- qq -->
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
-<title>孜孜不倦 · 一起交流学习心得，共同优化教育资源。</title>
+<title>孜孜不倦 · 协作写笔记,快乐做习题</title>
 <link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
-
+<script type="text/javascript" 
+	data-dojo-config="
+		async:true,
+		parseOnLoad:false,
+		isDebug:true" 
+	src="/dojo/dojo.js"></script>
+	
+<script type="text/javascript">
+	require(["drip/index"]);
+</script>
 </head>
-<body style="padding: 0px;margin: 0px">
-<div id="wrapper">
-<!-- 因为这里永远是用户没有登录时访问，所以就简单处理，不为了统一组件调用引入一堆dojo代码 -->
-<!-- 等需要的时候再引入 -->
-<div class="drip_header drip_header_logged_out">
-	<div class="container clearfix">
-		<a href="/" class="drip_header_logo">
-			<img alt="孜孜不倦" width="140px" height="40px" src="drip/resources/images/home_logo.png">
-		</a>
-		<span class="drip_version">测试版</span>
-		<ul class="drip_top_nav">
-			<li><a href="/exercises">题库</a></li>
-			<li><a href="/help">帮助</a></li>
-			<!-- <li><a href="/docs">文档</a></li> -->
-			<!-- <li><a href="#">开发博客</a></li> -->
-		</ul>
+<body style="padding: 0px;margin: 0px; height: 100%; visibility: hidden;">
+
+<div style="margin: 0 auto; width:245px;position: relative;top: 50%; margin-top: -200px">
+	<div>
+		<h1 class="logo">孜孜不倦</h1>
+		<h2>协作写笔记，快乐做习题</h2>
 	</div>
-</div>
-<div class="drip_home drip_site">
-	<div class="drip_welcome_area clearfix">
-		<div class="container">
-			<div class="drip_home_signup">
-				<!-- <p class="drip_note">不用注册，直接用以下帐号登录</p>-->
-				<p class="drip_note">不用注册，直接用人人帐号登录</p>
-				<!-- 
-				<div>
-					<a href="/login/qq">
-						<img alt="用qq帐号登录" src="drip/resources/images/qq_login_5.png"></img>
-					</a>
-				</div>
-				 -->
-				<div>
-					<a href="/login/renren">
-						<img alt="用人人帐号登录" src="drip/resources/images/renren_login_white_234_48.png"></img>
-					</a>
-				</div>
-				<!-- 
-				<div>
-					<a href="/login/sinaWeibo">
-						<img alt="用新浪微博帐号登录" src="drip/resources/images/sina_weibo_login_48.png"></img>
-					</a>
-				</div>
-				 -->
-			</div>
-			<div class="drip_heading">
-				<p>全国考研族</p>
-				<p>都在<span style="color:#00a300">孜孜不倦</span>学习数学</p>
-				<p class="drip_subheading" style="margin-top: 30px">邀请考研的同学，一起录入习题，解答习题。</p>
-			</div>
+	<div id="authContainer">
+		
+	</div>
+	<div>
+		<a id="link" href="javascript:"></a>
+	</div>
+	<div>
+		<div style="text-align: center;">
+			<a href="/exercises">题库</a>
+			
+			<a href="/docs">笔记</a>
 		</div>
 	</div>
 </div>
-<div>
-</div>
-</div>
+
 </body>
 </html>
