--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -21,7 +21,7 @@
 	require(["drip/index"]);
 </script>
 </head>
-<body style="padding: 0px;margin: 0px; height: 100%; visibility: hidden;">
+<body style="visibility: hidden;">
 
 <div style="margin: 0 auto; width:245px;position: relative;top: 50%; margin-top: -200px">
 	<div>
