#75 为Login和Register部件提取css样式类,并设计完成index.html页面的样式。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -10,6 +10,9 @@
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
 <title>孜孜不倦 · 协作写笔记,快乐做习题</title>
 <link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
+<style type="text/css">
+@import url('drip/resources/Register.css');
+</style>
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
@@ -23,22 +26,21 @@
 </head>
 <body style="visibility: hidden;">
 
-<div style="margin: 0 auto; width:245px;position: relative;top: 50%; margin-top: -200px">
+<div class="zzbj_signup">
 	<div>
 		<h1 class="logo">孜孜不倦</h1>
-		<h2>协作写笔记，快乐做习题</h2>
+		<h2 class="subheading">协作写笔记，快乐做习题</h2>
 	</div>
 	<div id="authContainer">
 		
 	</div>
-	<div>
+	<div class="login_link">
 		<a id="link" href="javascript:"></a>
 	</div>
-	<div>
+	<div class="menu_link">
 		<div style="text-align: center;">
-			<a href="/exercises">题库</a>
-			
 			<a href="/docs">笔记</a>
+			<a href="/exercises">题库</a>
 		</div>
 	</div>
 </div>
