#85 解决firefox浏览器下点击“我要登录”或“我要注册一个新帐号”没有反应的bug

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -35,7 +35,7 @@
 		
 	</div>
 	<div class="login_link">
-		<a id="link" href="javascript:"></a>
+		<a id="link" href="#"></a>
 	</div>
 	<div class="menu_link">
 		<div style="text-align: center;">
