添加跳转到习题库页面和项目列表页面的链接和跳转逻辑。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -41,8 +41,8 @@
 	</div>
 	<div class="menu_link">
 		<div style="text-align: center;">
-			<a href="/docs">笔记</a>
-			<a href="/exercises">题库</a>
+			<a href="/explore_projects">笔记</a>
+			<a href="/explore_exercises">题库</a>
 		</div>
 	</div>
 </div>
