完善权限验证机制。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -9,11 +9,11 @@
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
 <title>孜孜不倦 · 协作写笔记,快乐做习题</title>
-<link rel="stylesheet" type="text/css" href="drip/resources/index.css" />
+<link rel="stylesheet" type="text/css" href="/drip/resources/index.css" />
 <link type="text/css" rel="stylesheet" href="/drip/resources/font-awesome/css/font-awesome.css" />
 
 <style type="text/css">
-@import url('drip/resources/Register.css');
+@import url('/drip/resources/Register.css');
 </style>
 <script type="text/javascript" 
 	data-dojo-config="
