--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -21,6 +21,7 @@ require(["drip/exercises/ExerciseForm",
 	
 	var exerciseForm = new ExerciseForm();
 	exerciseForm.placeAt("formContainer");
+	exerciseForm.startup();
 	
 });
 </script>
@@ -44,7 +45,7 @@ require(["drip/exercises/ExerciseForm",
 <body class="claro">
 	<div id="wrapper" class="drip_body">
 		<div id="header" style="min-height:43px"></div>
-		<div id="main" class="container" style="padding-top: 60px;">
+		<div id="main" class="container">
 			<!-- <label style="font-size: 18px; font-weight: bold">录入新习题</label> -->
 			<div style="margin-top: 10px;" id="formContainer">
 			</div>
