消除获取用户新增习题和解答习题的活动列表中的查询错误

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -220,7 +220,8 @@ function sendRenrenRequest(){
 				<ul class="pageHeader-actions">
 
 					<li>
-						<a class="minibutton">写笔记</a>
+						<!-- FIXME：需要提供选择项目的选项，将最近使用的项目放在最上面 -->
+						<a class="minibutton" href="#">写笔记</a>
 					</li>
 
 					<li>
@@ -305,7 +306,10 @@ function sendRenrenRequest(){
 							 		</div>
 								 </div>
 							 	<div style="margin-top: 20px;">
+							 		<!-- 根据第三方网站用户的来源，显示不同的邀请文本 -->
+							 		<!-- 
 							 		<button class="minibutton" onclick="sendRenrenRequest();"><i class="icon-bullhorn icon-large"></i> 邀请人人好友一起学习</button>
+							 		 -->
 							 	</div>
 							 	
 							 	<div class="box box-small">
