--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -43,28 +43,17 @@ require(["dojo/ready",
 	
 	// 加载左侧栏目中的数据，因为左侧没有用dijit部件，所无需放在ready方法中
 	user.getLoggedUserInfo().then(function(userInfo){
-		console.log("登录用户信息:", userInfo);
-		// 在右侧用户信息区域显示
-		var profileImg = dom.byId("profileImage");
-		var displayName = userInfo.nickName;
-		profileImg.alt = displayName;
-		profileImg.src = userInfo.largeImageUrl || "/drip/resources/images/profile_180_180.gif";
-		dom.byId("userName").innerHTML = displayName;
-		
-		
-		// 在关注和粉丝的链接上加上登录者的用户标识
-		// 切记：出现在rest链接中的，只能是本地用户标识，而不是第三方网站或映射用户标识
-		dom.byId("following_link").href = "/following/" + userInfo.digitalId;
-		dom.byId("follower_link").href = "/followers/" + userInfo.digitalId;
 		
 	});
 	
-	user.getLoggedUserStatistics().then(function(statistics){
-		dom.byId("follow_count").innerHTML = statistics.followCount;
-		dom.byId("fan_count").innerHTML = statistics.fanCount;
-		// 在页面顶级tab中显示
-		dom.byId("my_answer_count").innerHTML = statistics.answerCount;
-		dom.byId("my_exer_count").innerHTML = statistics.exerciseCount;
+	// 因为统计信息变化比较频繁，所以没有保存在用户session中
+	user.getLoggedUserStatistics().then(function(stat){
+		dom.byId("follow_count").innerHTML = stat.followCount;
+		dom.byId("fan_count").innerHTML = stat.fanCount;
+		dom.byId("exer_draft_count").innerHTML = stat.exerDraftCount;
+		dom.byId("exer_publish_count").innerHTML = stat.exerPublishCount;
+		dom.byId("answer_count").innerHTML = stat.answerCount;
+		dom.byId("doc_commit_count").innerHTML = stat.docCommitCount;
 	});
 	
 	var store = new JsonRest({
@@ -83,62 +72,6 @@ require(["dojo/ready",
 		noDataMessage:followingNoDataMessage
 	});
 	activities.placeAt("activitiesContainer");
-	
-	var following = dom.byId("following");
-	var myAnswer = dom.byId("myAnswer");
-	var myExercise = dom.byId("myExercise");
-	
-	// 两个动作，一个是刷新，一个是切换。
-	// 都使用一个store，然后传入不同的条件刷新
-	on(following, "click", function(e){
-		event.stop(e);
-		if(!domClass.contains(following,"selected")){
-			domClass.add(following,"selected");
-			// TODO:如何刷新tab上的统计数据呢？
-			// 或者在这个界面上有一个增加统计值的操作，就触发一个时间，从后台刷新一下，或者在前台更新一下
-			// 而不在切换时刷新。
-			activities.noDataMessage = followingNoDataMessage;
-			activities.setQuery({type:"following"});
-		}else{
-			// 刷新
-			activities.setQuery();
-		}
-		domClass.remove(myAnswer, "selected");
-		domClass.remove(myExercise, "selected");
-		
-		
-	});
-	
-	on(myAnswer, "click", function(e){
-		event.stop(e);
-		if(!domClass.contains(myAnswer,"selected")){
-			domClass.add(myAnswer,"selected");
-			
-			activities.noDataMessage = myAnswerNoDataMessage;
-			activities.setQuery({type:"myAnswer"});
-		}else{
-			// 刷新
-			activities.setQuery();
-		}
-		domClass.remove(following, "selected");
-		domClass.remove(myExercise, "selected");
-	});
-	
-	on(myExercise, "click", function(e){
-		event.stop(e);
-		if(!domClass.contains(myExercise,"selected")){
-			domClass.add(myExercise,"selected");
-			
-			activities.noDataMessage = myExerciseNoDataMessage;
-			activities.setQuery({type:"myExercise"});
-		}else{
-			// 刷新
-			activities.setQuery();
-		}
-		domClass.remove(following, "selected");
-		domClass.remove(myAnswer, "selected");
-	});
-	
 	
 	// 加载登录用户发起的项目列表
 	// 如果没有传递用户信息，则获取登录用户的项目列表
@@ -255,6 +188,7 @@ function sendRenrenRequest(){
 				<div class="clearfix">
 						<div class="drip_main_center">
 							<!-- 个人首页的链接tab -->
+							<!--
 							<div class="drip_tab_nav">
 								<ul class="drip_tab_nav_tabs">
 									<li>
@@ -266,15 +200,59 @@ function sendRenrenRequest(){
 									<li>
 										<a href="#" id="myExercise" class="drip_tab_nav_tab">我录的习题 <span class="counter" id="my_exer_count">0</span></a>
 									</li>
-									<!-- 添加一个我的作业 -->
+									<li>添加一个我的作业</li>
 								</ul>
 							</div>
+							-->
 							<div id="activitiesContainer" class="drip_activity_list" style="padding-top:20px">
 								
 							</div>
 						</div>
 						<div class="drip_main_right">
 							<div style="padding-left:20px">
+								<div class="clearfix">
+									<!-- 个人信息面板 -->
+									<ul style="list-style: none;padding-left: 0px; margin-top: 20px">
+										<li>
+											<a href="#" id="following_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">关注</span>
+												<strong id="follow_count" style="font-size: 20px"></strong>
+											
+											</a>
+										</li>
+										<li>
+											<a href="#" id="follower_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">粉丝</span>
+												<strong id="fan_count" style="font-size: 20px"></strong>
+											</a>
+										</li>
+										<li>
+											<a href="#" id="exer_draft_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">习题草稿数</span>
+												<strong id="exer_draft_count" style="font-size: 20px"></strong>
+											</a>
+										</li>
+										<li>
+											<a href="#" id="exer_publish_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">发布习题数</span>
+												<strong id="exer_publish_count" style="font-size: 20px"></strong>
+											</a>
+										</li>
+										<li>
+											<a href="#" id="answer_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">回答问题数</span>
+												<strong id="answer_count" style="font-size: 20px"></strong>
+											</a>
+										</li>
+										<li>
+											<a href="#" id="doc_commit_link" style="text-decoration: none;color:#333">
+												<span style="text-align: center;">笔记提交次数</span>
+												<strong id="doc_commit_count" style="font-size: 20px"></strong>
+											</a>
+										</li>
+									</ul>
+								</div>
+							<!-- 
 								<div class="profile" style="margin-top: 10px;">
 							 		<div class="clearfix">
 							 			<div style="float:left">
@@ -305,6 +283,7 @@ function sendRenrenRequest(){
 										</ul>
 							 		</div>
 								 </div>
+								 -->
 							 	<div style="margin-top: 20px;">
 							 		<!-- 根据第三方网站用户的来源，显示不同的邀请文本 -->
 							 		<!-- 
