--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -8,7 +8,8 @@
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
-<title>孜孜不倦 · 协作写笔记,快乐做习题</title>
+<!-- 协作写笔记,快乐做习题 -->
+<title>孜孜不倦 · 在线做数学题</title>
 <link rel="stylesheet" type="text/css" href="/drip/resources/index.css" />
 <link type="text/css" rel="stylesheet" href="/drip/resources/font-awesome/css/font-awesome.css" />
 
