重命名放第三方帐号登录类的包名为connect

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -32,13 +32,19 @@
 <div class="zzbj_signup">
 	<div>
 		<h1 class="logo">孜孜不倦</h1>
-		<h2 class="subheading">协作写笔记，快乐做习题</h2>
+		<h2 class="subheading"><!-- 协作写笔记，快乐做习题 -->在线做数学题</h2>
 	</div>
 	<div id="authContainer">
 		
 	</div>
 	<div class="login_link">
 		<a id="link" href="#"></a>
+	</div>
+	<div style="text-align: center;" class="icon_connect">
+		<span>第三方帐号登录 </span>
+		<a href="/login/qq">
+			<img alt="qq登录" src="/drip/resources/images/qq_login_16_16.png">
+		</a>
 	</div>
 	<div class="menu_link">
 		<div style="text-align: center;">
