--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -8,7 +8,8 @@
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
 <meta property="wb:webmaster" content="76a2a86c8f477642" />
-<title>孜孜不倦 · 协作写笔记,快乐做习题</title>
+<!-- 协作写笔记,快乐做习题 -->
+<title>孜孜不倦 · 在线做数学题</title>
 <link rel="stylesheet" type="text/css" href="/drip/resources/index.css" />
 <link type="text/css" rel="stylesheet" href="/drip/resources/font-awesome/css/font-awesome.css" />
 
@@ -31,13 +32,19 @@
 <div class="zzbj_signup">
 	<div>
 		<h1 class="logo">孜孜不倦</h1>
-		<h2 class="subheading">协作写笔记，快乐做习题</h2>
+		<h2 class="subheading"><!-- 协作写笔记，快乐做习题 -->在线做数学题</h2>
 	</div>
 	<div id="authContainer">
 		
 	</div>
 	<div class="login_link">
 		<a id="link" href="#"></a>
+	</div>
+	<div style="text-align: center;" class="icon_connect">
+		<span>第三方帐号登录 </span>
+		<a href="/login/qq">
+			<img alt="qq登录" src="/drip/resources/images/qq_login_16_16.png">
+		</a>
 	</div>
 	<div class="menu_link">
 		<div style="text-align: center;">
