--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -48,7 +48,7 @@
 	</div>
 	<div class="menu_link">
 		<div style="text-align: center;">
-			<a href="/explore_projects">笔记</a>
+			<!-- <a href="/explore_projects">笔记</a> -->
 			<a href="/explore_exercises">题库</a>
 		</div>
 	</div>
