修改使用qq登录时，页面顶部的用户名称和头像显示不正确的bug

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -61,7 +61,8 @@ require(["drip/exercises/ExerciseForm",
 					</li>
 				</ul>
 				<div>
-					<a href="#"><i class="icon-arrow-left"></i> 我录的习题 (10)</a>
+				<!-- 0.0.1版本不提供该功能
+					<a href="#"><i class="icon-arrow-left"></i> 我录的习题 (10)</a> -->
 				</div>
 
 			</div>
