--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -51,10 +51,9 @@ require(["dojo/ready",
 	user.getLoggedUserStatistics().then(function(stat){
 		dom.byId("follow_count").innerHTML = stat.followCount;
 		dom.byId("fan_count").innerHTML = stat.fanCount;
-		dom.byId("exer_draft_count").innerHTML = stat.exerDraftCount;
 		dom.byId("exer_publish_count").innerHTML = stat.exerPublishCount;
 		dom.byId("answer_count").innerHTML = stat.answerCount;
-		dom.byId("doc_commit_count").innerHTML = stat.docCommitCount;
+		//dom.byId("doc_commit_count").innerHTML = stat.docCommitCount;
 	});
 	
 	var store = new JsonRest({
@@ -229,12 +228,6 @@ function sendRenrenRequest(){
 											</a>
 										</li>
 										<li>
-											<a href="#" id="exer_draft_link" style="text-decoration: none;color:#333">
-												<span style="text-align: center;">习题草稿数</span>
-												<strong id="exer_draft_count" style="font-size: 20px"></strong>
-											</a>
-										</li>
-										<li>
 											<a href="#" id="exer_publish_link" style="text-decoration: none;color:#333">
 												<span style="text-align: center;">发布习题数</span>
 												<strong id="exer_publish_count" style="font-size: 20px"></strong>
@@ -246,12 +239,14 @@ function sendRenrenRequest(){
 												<strong id="answer_count" style="font-size: 20px"></strong>
 											</a>
 										</li>
+										<!-- 
 										<li>
 											<a href="#" id="doc_commit_link" style="text-decoration: none;color:#333">
 												<span style="text-align: center;">笔记提交次数</span>
 												<strong id="doc_commit_count" style="font-size: 20px"></strong>
 											</a>
 										</li>
+										 -->
 									</ul>
 								</div>
 							<!-- 
