人人连接功能升级到使用人人网的oauth 2.0 api

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -40,10 +40,13 @@
 	<div class="login_link">
 		<a id="link" href="#"></a>
 	</div>
-	<div style="text-align: center;" class="icon_connect">
-		<span>第三方帐号登录 </span>
+	<div style="text-align: center; margin-top:10px" class="icon_connect">
+		<span>直接登录 </span>
 		<a href="/login/qq">
-			<img alt="qq登录" src="/drip/resources/images/qq_login_16_16.png">
+			<img alt="使用qq号登录" src="/drip/resources/images/qq_login_16_16.png">
+		</a>
+		<a href="/login/renren">
+			<img alt="使用人人帐号登录" src="/drip/resources/images/renren_login_16_16.png">
 		</a>
 	</div>
 	<div class="menu_link">
