删除用的样式定义和引用

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -40,7 +40,7 @@
 	<div class="login_link">
 		<a id="link" href="#"></a>
 	</div>
-	<div style="text-align: center; margin-top:10px" class="icon_connect">
+	<div style="text-align: center; margin-top:10px">
 		<span>直接登录 </span>
 		<a href="/login/qq">
 			<img alt="使用qq号登录" src="/drip/resources/images/qq_login_16_16.png">
