在第三方登录图标按钮上添加title属性

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -43,10 +43,10 @@
 	<div style="text-align: center; margin-top:10px">
 		<span>直接登录 </span>
 		<a href="/login/qq">
-			<img alt="使用qq号登录" src="/drip/resources/images/qq_login_16_16.png">
+			<img alt="使用qq号登录" title="使用qq号登录" src="/drip/resources/images/qq_login_16_16.png">
 		</a>
 		<a href="/login/renren">
-			<img alt="使用人人帐号登录" src="/drip/resources/images/renren_login_16_16.png">
+			<img alt="使用人人帐号登录" title="使用人人帐号登录" src="/drip/resources/images/renren_login_16_16.png">
 		</a>
 	</div>
 	<div class="menu_link">
