个人首页没有活动时，给提示信息添加样式和跳转链接。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -60,7 +60,7 @@ require(["dojo/ready",
 		 target:"/activities/"
 	 });
 	
-	var followingNoDataMessage = "没有活动，快去录入新题目，或到题库中解答习题";
+	var followingNoDataMessage = "没有活动，快去<a href='/exercises/new' style='font-weight:bold'>录入习题</a>，或到<a href='/explore_exercises' style='font-weight:bold'>题库</a>中解答习题";
 	var myAnswerNoDataMessage = "还没有回答问题，快到题库中解答习题";
 	var myExerciseNoDataMessage = "您还没有录入过习题，快去录入新题目";
 	
